* At end of combat, loot is now combined if you receive multiple instances of the same type of item.
* Combat output has been streamlined. There should be less buttonmashing to get to the next combat choice now. This doesn't change any of the mechanics, just how combat is displayed.
 - When picking a spell, the battle screen now shows what spell you picked when you choose a target.

* Streamlined Chief talk scenes (removed Next, now looks more in line with other NPC dialogue).
* Adjusted pacing in the Equines win scenes. They are now split up into multiple pages rather than one long scene.
* Adjusted pacing in Barnaby's blowjob scenes (the bartender of the Maidens' Bane) by splitting the scene in multiple pages.

* Major update to the structure of the code base (hence the update from 0.4 to 0.5).
 - The entire code base has been converted to ES6 modules and TypeScript instead of JavaScript, making much of the code strictly type checked (finding/fixing a fair number of obscure bugs), and preventing pollution of the global namespace.
 - The build system has been changed from gulp to webpack.
 - Nodejs is used to get the latest versions of all vendor packages.
 - More than anything else, this gives me a more stable platform to add content to. 
* What does this update mean for you as a player? It shouldn't change anything, but due to the magnitude of the changes, it's possible that some errors have sneaked their way through. I'll be releasing a slightly bigger, non-uglified development version that contains some more backtrace information until things stabilize, please report any issues that show up.
 - For those that used the player object in the console to cheat, this method is unfortunately not available anymore. If there's requests for that kind of thing, I might consider making the objects accessible in some way.